2002-06-20  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-type-filter-alist): Fixed parenthesis.
	(octet-filter-call1, octet-filter-call2, octet-filter-call2-extra):
	Enclose call-process with as-binary-process.

002-05-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* octet.el (octet-find-file): Bind `buffer-read-only', only while
	calling `octet-buffer'.	

2002-06-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.50, which means the
	developing version of next stable series.

	* Release emacs-w3m-1.2.8 from emacs-w3m-1_2 branch.

2002-06-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el: Require `w3m-e19' for Emacs 19 to be able to compile
	this module alone.

2002-06-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mailarc.el: New file.

	* shimbun/sb-quickml.el: Ditto.

2002-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search): Don't extract a default word from
	the header line.

2002-06-18  NOKUBI Takatsugu  <knok@daionet.gr.jp>

	* shimbun/sb-marc-aims.el: New file.

2002-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-insert): Use the property `keymap'
	instead of `local-map' for the recent Emacsen; add a help echo;
	fix a typo.

	* w3m-xmas.el (w3m-setup-header-line): Remove.

2002-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e19.el: Remove many emulating functions on the condition
	that APEL should be used; require `cl' only when compiling;
	require `pcustom' instead of `custom'.
	(compose-mail): New function.
	(read-passwd): Autoload "ange-ftp".

	* w3m-proc.el (read-passwd): Autoload "w3m-e19" for Emacs 19.

	* w3m-util.el (cancel-timer): Autoload "timer" for not only Mule 2
	but also Emacs 19.

	* w3m.el: Require `w3m-e19' for Emacs 19.

	* w3mhack.el (w3mhack-emacs-major-version): New constant.
	(TopLevel): Silence the byte-compiler for not only Mule 2 but also
	Emacs 19.
	(w3mhack-mdelete): New function.