@@ -1,10 +1,15 @@
+2002-06-03  Hidetaka Iwai <tyuyu@mb6.seikyou.ne.jp>
+
+	* sb-texfaq.el (shimbun-texfaq-group-path-alist): Fix path
+	to get latest articles.
+
 2002-06-20  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* octet.el (octet-type-filter-alist): Fixed parenthesis.
 	(octet-filter-call1, octet-filter-call2, octet-filter-call2-extra):
 	Enclose call-process with as-binary-process.
 
-002-05-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
+2002-05-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
 
 	* octet.el (octet-find-file): Bind `buffer-read-only', only while
 	calling `octet-buffer'.	
